<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">


    <EditText
        android:id="@+id/registroNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#30ffffff"
        android:hint="@string/nombre"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:maxLength="30"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/registro1Apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/primerApellido"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:maxLength="30"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/registroNombre"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/registro2Apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/segundoApellido"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:maxLength="30"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/registro1Apellido"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/registroDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/direccion"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:maxLength="30"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/registro2Apellido"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/registroEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/email"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:maxLength="30"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/registroDireccion"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/registroMovil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/movil"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:maxLength="30"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/registroEmail"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/registroContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:maxLength="30"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/registroMovil"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/registroRepiteContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#30ffffff"
        android:hint="@string/repitePassword"
        android:inputType="textPassword"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:maxLength="30"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@+id/registroContraseña"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/baseline_check_24" />


</androidx.constraintlayout.widget.ConstraintLayout>