<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/IvReservaPista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/pista"/>

            <TextView
                android:id="@+id/my_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/reservaPista"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="#40000000"/>

            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/frame1"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/IvReservaGim"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/gimnasio"/>

            <TextView
                android:id="@+id/my_textview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/reservaGim"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="#40000000"/>
            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/frame2"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp">

            <ImageView
                android:src="@drawable/piscina"
                tools:ignore="ContentDescription"
                android:id="@+id/IvReservaPiscina"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


           <TextView
                android:id="@+id/my_textview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/reservaPiscina"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="#30000000"/>

            </androidx.cardview.widget.CardView>

        </FrameLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
